# projet_yamqtt

./: .gitignore  CMakeLists.txt  CONSIGNES.md  Makefile  README.md  client.c  makefile  pointeur.c  serveur.c  socket.c  socket.h  swap.c  swap.h
.github/workflows/: c-cpp.yml
client/: Makefile  client.c  fichier_random
serveur/: .gitignore  Makefile  serveur.c  socket.c  socket.h
src/client/: client.c  test_pipe_in
src/serveur/: socket.c  socket.h
